fix: 修复 JDK 8 兼容性问题，替换 Path.of() 和 readAllBytes()